# Vulkan-samples

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: android.yml  macos.yml  windows.yml
jipu/: CMakeLists.txt  jipu_proc.cpp  native_proc.cpp  proc_table.cpp  webgpu.cpp  webgpu_proc.cpp
jipu/common/: CMakeLists.txt  dylib.cpp  dylib.h  ref_counted.cpp  ref_counted.h  thread_pool.cpp  thread_pool.h
jipu/native/: CMakeLists.txt  adapter.cpp  adapter.h  bind_group.h  bind_group_layout.h  buffer.h  command_buffer.h  command_encoder.h  compute_pass_encoder.h  device.h  instance.cpp  instance.h  physical_device.h  pipeline.h  pipeline_layout.h  query_set.h  queue.h  render_bundle.h  render_bundle_encoder.h  render_pass_encoder.h  sampler.h  shader_module.h  surface.h  swapchain.h  texture.h  texture_view.h
jipu/native/include/: physical_device.h  surface.h  texture.h
jipu/native/include/jipu/: swapchain.h
jipu/native/source/jipu/: instance.cpp
jipu/native/source/vulkan/: vulkan_api.cpp  vulkan_binding_group_layout.h  vulkan_device.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_instance.h  vulkan_pipeline.h  vulkan_pipeline_layout.h  vulkan_queue.h  vulkan_render_pass.cpp  vulkan_render_pass_encoder.h  vulkan_swapchain.h  vulkan_texture.h  vulkan_texture_view.cpp
jipu/native/vulkan/: vulkan_adapter.cpp  vulkan_adapter.h  vulkan_api.cpp  vulkan_api.h  vulkan_bind_group.cpp  vulkan_bind_group.h  vulkan_bind_group_layout.cpp  vulkan_bind_group_layout.h  vulkan_binding_group.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_command.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_command_encoder.cpp  vulkan_command_encoder.h  vulkan_command_pool.cpp  vulkan_command_pool.h  vulkan_command_recorder.cpp  vulkan_command_recorder.h  vulkan_command_resource_synchronizer.cpp  vulkan_command_resource_synchronizer.h  vulkan_command_resource_tracker.cpp  vulkan_command_resource_tracker.h  vulkan_compute_pass_encoder.cpp  vulkan_compute_pass_encoder.h  vulkan_deleter.cpp  vulkan_deleter.h  vulkan_descriptor_pool.cpp  vulkan_descriptor_pool.h  vulkan_device.cpp  vulkan_device.h  vulkan_fence_pool.cpp  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_inflight_context.cpp  vulkan_inflight_context.h  vulkan_inflight_objects.cpp  vulkan_inflight_objects.h  vulkan_instance.cpp  (+43 more)
jipu/webgpu/: CMakeLists.txt  webgpu_adapter.cpp  webgpu_adapter.h  webgpu_bind_group.cpp  webgpu_bind_group.h  webgpu_bind_group_layout.cpp  webgpu_bind_group_layout.h  webgpu_buffer.cpp  webgpu_buffer.h  webgpu_command_buffer.h  webgpu_command_encoder.cpp  webgpu_command_encoder.h  webgpu_device.cpp  webgpu_device.h  webgpu_header.h  webgpu_instance.cpp  webgpu_instance.h  webgpu_pipeline_layout.cpp  webgpu_pipeline_layout.h  webgpu_queue.cpp  webgpu_queue.h  webgpu_render_bundle.cpp  webgpu_render_bundle.h  webgpu_render_bundle_encoder.cpp  webgpu_render_bundle_encoder.h  webgpu_render_pass_encoder.cpp  webgpu_render_pass_encoder.h  webgpu_render_pipeline.cpp  webgpu_render_pipeline.h  webgpu_sampler.cpp  webgpu_sampler.h  webgpu_shader_module.cpp  webgpu_shader_module.h  webgpu_surface.cpp  webgpu_surface.h  webgpu_texture.cpp  webgpu_texture.h  webgpu_texture_view.cpp  webgpu_texture_view.h
jipu/webgpu/event/: event.cpp  event.h  event_manager.cpp  event_manager.h  queue_work_done_event.cpp  queue_work_done_event.h  request_adapter_event.cpp  request_adapter_event.h  request_device_event.cpp  request_device_event.h
sample/: CMakeLists.txt
sample/android/apps/blend/: build.gradle
sample/android/apps/deferred/: build.gradle
sample/android/apps/imgui/: build.gradle
sample/android/apps/instancing/: build.gradle
sample/android/apps/obj_model/: build.gradle
sample/apps/: CMakeLists.txt
sample/apps/blend/: blend_sample.cpp  blend_sample.h
sample/apps/deferred/: main.cpp
sample/apps/imgui/: main.cpp
sample/apps/instancing/: main.cpp
sample/apps/obj_model/: main.cpp
sample/apps/offscreen/: offscreen_sample.cpp  offscreen_sample.h
sample/apps/particle/: main.cpp
sample/apps/query/: query_sample.cpp  query_sample.h
sample/apps/triangle/: main.cpp
sample/apps/vulkan_n_buffering/: vulkan_n_buffering_sample.cpp  vulkan_n_buffering_sample.h
sample/apps/vulkan_pipeline_barrier/: vulkan_pipeline_barrier_sample.cpp  vulkan_pipeline_barrier_sample.h
sample/apps/vulkan_subpasses/: vulkan_subpasses_sample.cpp  vulkan_subpasses_sample.h
sample/apps/wgpu_deferred_rendering/: CMakeLists.txt  main.cpp  stanfordDragon.cpp  stanfordDragon.h  stanfordDragonData.h  stanford_dragon.cpp  stanford_dragon.h  stanford_dragon_data.cpp  stanford_dragon_data.h  utils.cpp  utils.h  wgpu_deferred_rendering.cpp  wgpu_deferred_rendering.h
sample/apps/wgpu_particles/: wgpu_particles.cpp  wgpu_particles.h
sample/apps/wgpu_render_bundles/: CMakeLists.txt  main.cpp  sphere.cpp  sphere.h  wgpu_render_bundles.cpp  wgpu_render_bundles.h
sample/apps/wgpu_rotating_cube/: CMakeLists.txt  main.cpp  wgpu_rotating_cube.cpp  wgpu_rotating_cube.h
sample/apps/wgpu_textured_cube/: CMakeLists.txt  main.cpp  wgpu_textured_cube.cpp  wgpu_textured_cube.h
sample/apps/wgpu_triangle/: CMakeLists.txt  wgpu_triangle.cpp  wgpu_triangle.h
sample/apps/wgpu_triangle2/: CMakeLists.txt  main.cpp  wgpu_triangle.cpp  wgpu_triangle.h  wgpu_triangle2.cpp  wgpu_triangle2.h
sample/apps/wgpu_triangle_msaa/: CMakeLists.txt  main.cpp  wgpu_triangle_msaa.cpp  wgpu_triangle_msaa.h
sample/base/: CMakeLists.txt  fps.cpp  fps.h  im_gui.cpp  im_gui.h  native_imgui.cpp  native_imgui.h  native_sample.cpp  native_sample.h  sample.cpp  sample.h  webgpu_api.cpp  webgpu_api.h  wgpu_im_gui.cpp  wgpu_im_gui.h  wgpu_imgui.cpp  wgpu_imgui.h  wgpu_sample.cpp  wgpu_sample.h  window.cpp  window.h  window_android.cpp  window_sdl.cpp
sample/base/hpc/: CMakeLists.txt
test/: CMakeLists.txt  buffer_test.cpp  copy_test.cpp  copy_test.h  device_test.cpp  submit_test.h  texture_test.cpp
test/base/: CMakeLists.txt  test.cpp  test.h  window_test.cpp  window_test.h
(+51 files in other folders)
